[gd_scene load_steps=2 format=3 uid="uid://bncqqfpg7gaww"]

[ext_resource type="Script" path="res://addons/anthonyec.timeline/timeline.gd" id="1_8vav5"]

[node name="Timeline" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_8vav5")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Toolbar" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="PlayButton" type="Button" parent="VBoxContainer/Toolbar"]
layout_mode = 2
text = "Play
"

[node name="JumpToStartButton" type="Button" parent="VBoxContainer/Toolbar"]
layout_mode = 2
text = "<<"

[node name="AddTrackButton" type="Button" parent="VBoxContainer/Toolbar"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 8
text = "Add Track"

[node name="Panel" type="Panel" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="EmptyState" type="VBoxContainer" parent="VBoxContainer/Panel"]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer/Panel/EmptyState"]
layout_mode = 2
text = "Select a sequence file to edit"
horizontal_alignment = 1

[node name="TrackEditor" type="HBoxContainer" parent="VBoxContainer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="SplitContainer" type="SplitContainer" parent="VBoxContainer/Panel/TrackEditor"]
layout_mode = 2
size_flags_horizontal = 3

[node name="TrackInfo" type="Tree" parent="VBoxContainer/Panel/TrackEditor/SplitContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 2.08165e-12)
layout_mode = 2
hide_root = true

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer/Panel/TrackEditor/SplitContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Tracks" type="VBoxContainer" parent="VBoxContainer/Panel/TrackEditor/SplitContainer/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="AddTrackDialog" type="ConfirmationDialog" parent="."]
unique_name_in_owner = true
title = "Add New Track"
initial_position = 1
ok_button_text = "Add Track"
dialog_hide_on_ok = false

[node name="NameInput" type="LineEdit" parent="AddTrackDialog"]
offset_right = 67.0625
offset_bottom = 31.0

[connection signal="pressed" from="VBoxContainer/Toolbar/AddTrackButton" to="." method="_on_add_track_button_pressed"]
[connection signal="item_mouse_selected" from="VBoxContainer/Panel/TrackEditor/SplitContainer/TrackInfo" to="." method="_on_track_info_item_mouse_selected"]
[connection signal="confirmed" from="AddTrackDialog" to="." method="_on_add_track_dialog_confirmed"]
[connection signal="text_submitted" from="AddTrackDialog/NameInput" to="." method="_on_add_track_name_input_submitted"]
